# nn_hypogen

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  chainlit.md  docker-compose.yml  pyproject.toml  requirements.txt
data/demo_corpus/: copper_ore_beneficiation.md  low_cost_charge_substitution.md  nickel_superalloy_microalloying.md  polymer_composite_fillers.md
data/knowledge_graph/: graph.json
data2md/: .env.example  README.md  data2md copy.py  data2md.py  requirements.txt
hypothesis-factory/: .env.example  AGENTS.md  Dockerfile  README.md  requirements.txt
hypothesis-factory/app/: streamlit_app.py
hypothesis-factory/backend/: __init__.py  api_server.py  config.py  corpus_worker.py  kg_worker.py  main.py  schemas.py
hypothesis-factory/benchmarks/: iterative_optimization.csv  iterative_optimization.md  iterative_optimization_summary.json  runnable_profiles.csv  runnable_profiles.md  runnable_profiles_summary.json  runtime_benchmark.json  solution_variants.csv  solution_variants.md
hypothesis-factory/docs/: README.md  architecture.md  demo_script.md  scoring_methodology.md  solution_variants.md
parsers/: debug_pagination.py  download_imim_pdfs.py  find_journals_pdfs.py  get_pdf_urls.py  search_rusneb_pdfs.py
scripts/: start.sh
src/: __init__.py  corpus.py  embeddings.py  export.py  graph_retrieval.py  hypotheses.py  ingest.py  knowledge_graph.py  qdrant_config.py  retrieval.py  schemas.py  settings.py
tests/: test_app.py  test_corpus.py  test_export.py  test_hypotheses.py  test_knowledge_graph.py  test_qdrant_pipeline.py
(+63 files in other folders)
