[project]
name = "hypothesis-factory-rag"
version = "0.1.0"
description = "Educational RAG prototype for generating research hypotheses from a fixed demo corpus."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chainlit>=2.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-qdrant>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "qdrant-client>=1.12.0",
    "fastembed>=0.8.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "pypdf>=6.0.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.1",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
